将版本号更新至 1.0.4，修改 manifest.json、package.json、build/manifest.json 和 versions.json 文件，以确保插件版本一致性和功能描述的准确性。

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "auto-meta",
-	"version": "1.0.2",
+	"version": "1.0.4",
 	"description": "Automatically manage metadata for your notes",
 	"main": "build/main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"build": "npm version patch --no-git-tag-version && node version-bump.mjs && tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
