--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            main.js
-            manifest.json
-            plugin.zip
+            build/main.js
+            build/manifest.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
