添加样式文件复制到构建目录，更新版本号至 1.0.7，修改相关配置文件以保持一致性。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,7 @@ jobs:
           files: |
             build/main.js
             build/manifest.json
+            build/styles.css
             plugin-${{ steps.ver.outputs.version }}.zip
           fail_on_unmatched_files: true
         env:
